log
ecd66d7
mi.,  4 de ago. de 2021 13:45:33: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
b1f3578
mi.,  4 de ago. de 2021 15:41:21: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
9c9304b
mi.,  4 de ago. de 2021 15:42:19: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=1;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
28ddb33
mi.,  4 de ago. de 2021 15:45:52: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
3547a2b
mi.,  4 de ago. de 2021 15:47:51: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
ff42761
mi.,  4 de ago. de 2021 15:49:59: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+b;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
b323b6a
mi.,  4 de ago. de 2021 15:50:40: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c=a+a;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
82f3215
mi.,  4 de ago. de 2021 15:50:57: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
eef46b5
